--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 # DarekSzwaja.github.io
 <HTML> 
 <HEAD> 
-
+Witam jestem Darek
 </HEAD> 
 
 <BODY> 
 <TABLE> 
   <TR> 
      <TD>LUBI OGLĄDAĆ YOUTUBE</TD> <BR>
-      <TD> yt.png </TD> <img src=html/>
+      <TD> </TD> <img src=yt.png />
      </TR>
 </BODY> 
 </HTML>
