--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
-# DarekSzwaja.github.io
-<HTML> 
-<HEAD> 
-Witam jestem Darek
-</HEAD> 
+<HTML>
+<BODY>
+<H1 style="font-size: 28px; text-align: center; background-color:blue;">TO JEST STRONA O MNIE.</H1><BR>
+Moje imie: Darek<BR>
+Moje nazwisko:Szwaja<BR>
+Mam 15 lat<BR>
+<p style="width: 100%; margin-left: 40px;
+  padding:20px 20px 20px 50px; background-color: green;">
+  Akapit zawierający dowolny tekst.Tekst dowolny w akapicie<BR>
+ <Font size="10">Na tej stronie chiałbym przedstawić wam kilka informacji na <BR> 
+   temat YOUTUBA</FONT>
+  <BIG><BR>YouTube – serwis internetowy założony w lutym 2005 roku, który umożliwia bezpłatne umieszczanie<BR> 
+    odtwarzanie strumieniowe, ocenianie i komentowanie filmów. Prezesem od 2014 roku jest Susan Wojcicki</BIG>.<BR>
+</A>
+<TABLE>
+	
+		<TD><IMG SRC="FB-like.jpg" width="25%"></TD>
+      
+      </TABLE>
 
-<BODY> 
-<TABLE> 
-  <TR> 
-     <TD>LUBI OGLĄDAĆ YOUTUBE</TD> <BR>
-      <TD> </TD> <img src=yt.png />
-     </TR>
-</BODY> 
-</HTML>
+</BODY>
+</HTML> 
+    <Font size="10">Na tej stronie chiałbym przedstawić wam kilka informacji na temat YOUTUBA </FONT>
