--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <HTML>
 <BODY>
-<H1 style="font-size: 28px; text-align: center; background-color:blue;">TO JEST STRONA O MNIE.</H1><BR>
-Moje imie: Darek<BR>
-Moje nazwisko:Szwaja<BR>
-Mam 15 lat<BR>
-<p style="width: 100%; margin-left: 40px;
-  padding:20px 20px 20px 50px; background-color: green;">
-  Akapit zawierający dowolny tekst.Tekst dowolny w akapicie<BR>
- <Font size="10">Na tej stronie chiałbym przedstawić wam kilka informacji na <BR> 
-   temat YOUTUBA</FONT>
-  <BIG><BR>YouTube – serwis internetowy założony w lutym 2005 roku, który umożliwia bezpłatne umieszczanie<BR> 
-    odtwarzanie strumieniowe, ocenianie i komentowanie filmów. Prezesem od 2014 roku jest Susan Wojcicki</BIG>.<BR>
-</A>
+<H1 style="font-size: 28px; text-align: center; background-color:blue;"><TD><IMG SRC="fort.png" width="35%">.</H1><BR><p 
+style="width: 100%; margin-right: 40px;>padding:20px 20px 20px 50px; background-color: blue;">
+<Font size="10">Komputerowa gra survivalowa rozwijana przez studio People Can Fly oraz Epic Games<BR>
+wydana w formie wczesnego dostępu 25 lipca 2017. Gra zawiera tryb współpracy i battle royale.<BR>
+Ten drugi został wydany 26 września 2017 jako samodzielna, darmowa gra – Fortnite Battle Royale.<BR>
+<left><a href="https://www.epicgames.com/fortnite/pl/buy-now/battle-royale"><img src="FRT.jpg"width="40%"/></a></left> 
+<right><a href="https://www.epicgames.com/fortnite/pl/buy-now/battle-royale"><img src="fr.jpg"width="40%"/></a></right> <BR> 
+Najpopularniejsi polscy i zagraniczni gracze: <BR>
+<BIG>1</BIG> NINJA <left><a href="https://www.youtube.com/user/NinjasHyper"><img src="NIN.jpg"width="40%"/></a></left>  Tyler Blevins<BR>
+<BIG>2</BIG> IZAK <left><a href="https://www.youtube.com/user/issacc87"><img src="IZ.jpg"width="40%"/></a></left> Piotr Skowyrski<BR>
+<BIG>3</BIG> EWRON <left><a href="https://www.youtube.com/user/TheEwron"><img src="EW.jpg"width="40%"/></a></left>
+</BODY>
 <TABLE>
 	
-		<TD><IMG SRC="FB-like.jpg" width="25%"></TD>
-      
-      </TABLE>
+		
+     
 
-</BODY>
+ 
+      </TABLE>
 </HTML> 
-    <Font size="10">Na tej stronie chiałbym przedstawić wam kilka informacji na temat YOUTUBA </FONT>
+	https://www.youtube.com/user/TheEwron 
+	<left><a href="https://www.youtube.com/user/TheEwron"><img src="EW.jpg"width="40%"/></a></left>
