--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Ten drugi został wydany 26 września 2017 jako samodzielna, darmowa gra – For
 Najpopularniejsi polscy i zagraniczni gracze: <BR>
 <BIG>1</BIG> NINJA <left><a href="https://www.youtube.com/user/NinjasHyper"><img src="NIN.jpg"width="40%"/></a></left>  Tyler Blevins<BR>
 <BIG>2</BIG> IZAK <left><a href="https://www.youtube.com/user/issacc87"><img src="IZ.jpg"width="40%"/></a></left> Piotr Skowyrski<BR>
-<BIG>3</BIG> EWRON <left><a href="https://www.youtube.com/user/TheEwron"><img src="EW.jpg"width="40%"/></a></left>
+<BIG>3</BIG> EWRON <left><a href="https://www.youtube.com/user/TheEwron"><img src="EW.jpg"width="40%"/></a></left><BR>
 </BODY>
 <TABLE>
 	
