--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <BODY>
-<H1 style="font-size: 28px; text-align: center; background-color:blue;"><TD><IMG SRC="fort.png" width="35%">.</H1><BR><p 
+<H1 style="font-size: 28px; text-align: center; background-color:blue and white;"><TD><IMG SRC="fort.png" width="35%">.</H1><BR><p 
 style="width: 100%; margin-right: 40px;>padding:20px 20px 20px 50px; background-color: blue;">
 <Font size="10">Komputerowa gra survivalowa rozwijana przez studio People Can Fly oraz Epic Games<BR>
 wydana w formie wczesnego dostępu 25 lipca 2017. Gra zawiera tryb współpracy i battle royale.<BR>
