--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ style="width: 100%; margin-right: 40px;>padding:20px 20px 20px 50px; background-
 <Font size="10">Komputerowa gra survivalowa rozwijana przez studio People Can Fly oraz Epic Games<BR>
 wydana w formie wczesnego dostępu 25 lipca 2017. Gra zawiera tryb współpracy i battle royale.<BR>
 Ten drugi został wydany 26 września 2017 jako samodzielna, darmowa gra – Fortnite Battle Royale.<BR>
-<left><a href="https://www.epicgames.com/fortnite/pl/buy-now/battle-royale"><img src="FRT.jpg"width="40%"/></a></left> 
-<right><a href="https://www.epicgames.com/fortnite/pl/buy-now/battle-royale"><img src="fr.jpg"width="40%"/></a></right> <BR> 
+<left><a href="https://www.epicgames.com/fortnite/pl/buy-now/battle-royale"><img src="FRT.jfif"width="40%"/></a></left> 
+<right><a href="https://www.epicgames.com/fortnite/pl/buy-now/battle-royale"><img src="fr.jfif"width="40%"/></a></right> <BR> 
 Najpopularniejsi polscy i zagraniczni gracze: <BR>
-<BIG>1</BIG> NINJA <left><a href="https://www.youtube.com/user/NinjasHyper"><img src="NIN.jpg"width="40%"/></a></left>  Tyler Blevins<BR>
-<BIG>2</BIG> IZAK <left><a href="https://www.youtube.com/user/issacc87"><img src="IZ.jpg"width="40%"/></a></left> Piotr Skowyrski<BR>
-<BIG>3</BIG> EWRON <left><a href="https://www.youtube.com/user/TheEwron"><img src="EW.jpg"width="40%"/></a></left><BR>
+<BIG>1</BIG> NINJA <left><a href="https://www.youtube.com/user/NinjasHyper"><img src="NIN.jfif"width="40%"/></a></left>  Tyler Blevins<BR>
+<BIG>2</BIG> IZAK <left><a href="https://www.youtube.com/user/issacc87"><img src="IZ.jfif"width="40%"/></a></left> Piotr Skowyrski<BR>
+<BIG>3</BIG> EWRON <left><a href="https://www.youtube.com/user/TheEwron"><img src="EW.jfif"width="40%"/></a></left><BR>
 </BODY>
 <TABLE>
 	
